# 3-semester

./: #build.vc2017.win64.bat  CMakeLists.txt  README.md
coursework/: CMakeLists.txt  Report.docx
coursework/test/: CMakeLists.txt  main.cpp
labs/: CMakeLists.txt
labs/complex/: CMakeLists.txt  complex.cpp  complex.h
labs/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h
labs/dynamic_array_t/: CMakeLists.txt  dynamic_array_t.cpp  dynamic_array_t.h
labs/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
labs/priority_queue_on_list/: CMakeLists.txt  priority_queue_on_list.cpp  priority_queue_on_list.h
labs/queue_on_array/: CMakeLists.txt  queue_on_array.cpp  queue_on_array.h
labs/queue_on_list/: CMakeLists.txt  queue_on_list.cpp  queue_on_list.h
labs/rational/: CMakeLists.txt  rational.cpp  rational.h
labs/stack_on_array/: CMakeLists.txt  stack_on_array.cpp  stack_on_array.h
labs/stack_on_list/: CMakeLists.txt  stack_on_list.cpp  stack_on_list.h
labs/tests/: CMakeLists.txt  test_complex.cpp  test_dynamic_array.cpp  test_dynamic_array_t.cpp  test_matrix.cpp  test_priority_queue_on_list.cpp  test_queue_on_array.cpp  test_queue_on_list.cpp  test_rational.cpp  test_stack_on_array.cpp  test_stack_on_list.cpp
