include_directories(.)

add_subdirectory(rational)
add_subdirectory(complex)
add_subdirectory(dynamic_array)
add_subdirectory(matrix)
add_subdirectory(stack_on_array)
add_subdirectory(stack_on_list)
add_subdirectory(queue_on_array)
add_subdirectory(queue_on_list)
add_subdirectory(dynamic_array_t)
add_subdirectory(priority_queue_on_list)

add_subdirectory(tests)